# asset_information_extraction

./: README.md  app.py  extractor.py  pyproject.toml  requirements.txt
research/: langchain_v1.py
